move v1_3_10 tag