@@ -13,20 +13,20 @@ import java.util.*;
 
 import org.mmbase.bridge.*;
 import org.mmbase.bridge.util.SearchUtil;
+import org.mmbase.remotepublishing.PublishManager;
+import org.mmbase.remotepublishing.util.PublishUtil;
 import org.mmbase.storage.search.RelationStep;
 import org.mmbase.storage.search.Step;
 
 import com.finalist.cmsc.mmbase.TypeUtil;
-import com.finalist.cmsc.navigation.NavigationUtil;
-import com.finalist.cmsc.navigation.PagesUtil;
-import com.finalist.cmsc.navigation.PortletUtil;
+import com.finalist.cmsc.navigation.*;
 import com.finalist.cmsc.repository.ContentElementUtil;
 import com.finalist.cmsc.repository.RepositoryUtil;
 import com.finalist.cmsc.services.publish.Publish;
 import com.finalist.cmsc.services.workflow.Workflow;
 
 public class PagePublisher extends Publisher {
-
+    
     public PagePublisher(Cloud cloud) {
         super(cloud);
     }
@@ -39,39 +39,30 @@ public class PagePublisher extends Publisher {
     @Override
     public void publish(Node node) {
         Map<Node, Date> nodes = new LinkedHashMap<Node, Date>();
-        addPageNodes(node, nodes);
+        Date publishDate = node.getDateValue(PagesUtil.PUBLISHDATE_FIELD);
 
-        publishNodes(nodes);
-    }
-
-	protected void addPageNodes(Node node, Map<Node, Date> nodes) {
-		Date publishDate = node.getDateValue(PagesUtil.PUBLISHDATE_FIELD);
-
-        Long date = Long.valueOf(System.currentTimeMillis());
+        Long date = new Long(System.currentTimeMillis());
         Map<Node, Date> pageNodes = findPageNodes(node, publishDate);
         for (Node pnode : pageNodes.keySet()) {
             if (PortletUtil.isNodeParameter(pnode)) {
-
+                
                 Node valueNode = pnode.getNodeValue(PortletUtil.VALUE_FIELD);
                 if (RepositoryUtil.isContentChannel(valueNode)) {
                     publishContentChannel(nodes, valueNode, date);
                 }
                 if (RepositoryUtil.isCollectionChannel(valueNode)) {
-                    if (!isPublished(valueNode)) {
+                    if (!PublishManager.isPublished(valueNode)) {
                         addChannels(nodes, valueNode);
                     }
-                    NodeList contentNodes = RepositoryUtil.getContentChannelsForCollection(valueNode);
+                    NodeList contentNodes = RepositoryUtil.getContentChannels(valueNode);
                     for (Iterator<Node> iter = contentNodes.iterator(); iter.hasNext();) {
                         Node contentChannel = iter.next();
                         publishContentChannel(nodes, contentChannel, date);
                     }
                 }
                 if (ContentElementUtil.isContentElement(valueNode)) {
-                    if (!isPublished(valueNode)) {
-                       if (Workflow.hasWorkflow(valueNode) && !Workflow.mayPublish(valueNode)) {
-                          continue;
-                       }
-                        NodeList channels = RepositoryUtil.getContentChannelsForContent(valueNode);
+                    if (!PublishManager.isPublished(valueNode)) {
+                        NodeList channels = RepositoryUtil.getContentChannels(valueNode);
                         for (Iterator<Node> iter = channels.iterator(); iter.hasNext();) {
                             Node channel = iter.next();
                             addChannels(nodes, channel);
@@ -81,36 +72,34 @@ public class PagePublisher extends Publisher {
                 }
             }
         }
-
+        
         nodes.putAll(pageNodes);
 
         addReferredPageParameters(node, nodes, publishDate);
-	}
+        
+        for (Map.Entry<Node, Date> entry : nodes.entrySet()) {
+            Node pnode = entry.getKey();
+            Date publish = entry.getValue();
+            PublishUtil.publishOrUpdateNode(cloud, pnode.getNumber(), publish);
+        }
+    }
 
-	protected void publishContentChannel(Map<Node, Date> nodes, Node valueNode, Long date) {
-      if (!isPublished(valueNode)) {
+    private void publishContentChannel(Map<Node, Date> nodes, Node valueNode, Long date) {
+        if (!PublishManager.isPublished(valueNode)) {
             addChannels(nodes, valueNode);
-
+            
             NodeList contentNodes = getContentElements(valueNode, date);
             for (Iterator<Node> iter = contentNodes.iterator(); iter.hasNext();) {
                 Node contentElement = iter.next();
-
-                boolean hasWorkflow = Workflow.hasWorkflow(contentElement);
-                if (!hasWorkflow || (hasWorkflow && Workflow.isAccepted(contentElement))) {
-                   addContentBlock(nodes, contentElement);
-                }
+                addContentBlock(nodes, contentElement);
             }
         }
         else {
             NodeList contentNodes = getContentElements(valueNode, date);
             for (Iterator<Node> iter = contentNodes.iterator(); iter.hasNext();) {
                 Node contentElement = iter.next();
-                if (!isPublished(contentElement)) {
-                   boolean hasWorkflow = Workflow.hasWorkflow(contentElement);
-                   if (!hasWorkflow || (hasWorkflow && Workflow.isAccepted(contentElement))) {
-                      addContentBlock(nodes, contentElement);
-                   }
-
+                if (!PublishManager.isPublished(contentElement)) {
+                    addContentBlock(nodes, contentElement);
                 }
             }
         }
@@ -120,35 +109,45 @@ public class PagePublisher extends Publisher {
     public void remove(Node node) {
         Date publishDate = node.getDateValue(PagesUtil.PUBLISHDATE_FIELD);
         Map<Node, Date> pageNodes = findPageNodes(node, publishDate);
-        Set<Node> removeNodes = pageNodes.keySet();
-        removeNodes(removeNodes);
+        for (Node pnode : pageNodes.keySet()) {
+            PublishUtil.removeFromQueue(pnode);
+        }
     }
-
-    protected NodeList getContentElements(Node contentChannel, Long date) {
+    
+    @Override
+    public void unpublish(Node node) {
+        PublishUtil.removeNode(cloud, node.getNumber());
+    }
+    
+    private NodeList getContentElements(Node contentChannel, Long date) {
         NodeQuery query = RepositoryUtil.createLinkedContentQuery(contentChannel, null, null, null, false, null, -1, -1, -1, -1, -1);
         ContentElementUtil.addNotExpiredConstraint(contentChannel, query, date);
         NodeList contentNodes = query.getNodeManager().getList(query);
         return contentNodes;
     }
 
-    protected void addChannels(Map<Node, Date> nodes, Node contentChannel) {
+    private void addChannels(Map<Node, Date> nodes, Node contentChannel) {
         List<Node> path = RepositoryUtil.getPathToRoot(contentChannel);
-        for (Node pathElement : path) {
+        for (Iterator<Node> iter = path.iterator(); iter.hasNext();) {
+            Node pathElement = iter.next();
             if (!Publish.isPublished(pathElement) && !nodes.containsKey(pathElement)) {
                 nodes.put(pathElement, new Date());
             }
         }
     }
 
-    protected void addContentBlock(Map<Node, Date> nodes, Node content) {
+    private void addContentBlock(Map<Node, Date> nodes, Node content) {
+        if (Workflow.hasWorkflow(content) && !Workflow.mayPublish(content)) {
+            return;
+         }
         Date contentPublishDate = content.getDateValue(ContentElementUtil.PUBLISHDATE_FIELD);
         List<Node> contentBlockNodes = findContentBlockNodes(content);
         for (Node contentNode : contentBlockNodes) {
-            nodes.put(contentNode, contentPublishDate);
+            nodes.put(contentNode, contentPublishDate);    
         }
     }
 
-    protected void addReferredPageParameters(Node node, Map<Node, Date> nodes, Date publishDate) {
+    private void addReferredPageParameters(Node node, Map<Node, Date> nodes, Date publishDate) {
         NodeManager parameterManager = cloud.getNodeManager(PortletUtil.NODEPARAMETER);
         NodeManager portletManager = cloud.getNodeManager(PortletUtil.PORTLET);
         NodeManager pageManager = cloud.getNodeManager(PagesUtil.PAGE);
@@ -163,54 +162,54 @@ public class PagePublisher extends Publisher {
         query.addField(parameterStep, parameterManager.getField(PortletUtil.VALUE_FIELD));
         query.addField(parameterStep, parameterManager.getField("number"));
         SearchUtil.addEqualConstraint(query, parameterManager.getField(PortletUtil.VALUE_FIELD), Integer.valueOf(node.getNumber()));
-
+        
         NodeList referredPages = cloud.getList(query);
         for (Iterator<Node> iter = referredPages.iterator(); iter.hasNext();) {
             Node queryNode = iter.next();
             int pageNumber = queryNode.getIntValue(PagesUtil.PAGE + ".number");
             int parameterNumber = queryNode.getIntValue(PortletUtil.NODEPARAMETER + ".number");
             Node referredPage = cloud.getNode(pageNumber);
-            if (isPublished(referredPage)){
+            if (PublishManager.isPublished(referredPage)){
                 nodes.put(cloud.getNode(parameterNumber), publishDate);
             }
         }
     }
 
-    public Map<Node, Date> findPageNodes(Node node, Date publishDate) {
+    public static Map<Node, Date> findPageNodes(Node node, Date publishDate) {
         Map<Node, Date> nodes = new LinkedHashMap<Node, Date>();
         findPageNodes(node, nodes, publishDate);
         return nodes;
     }
 
-
-    protected void findPageNodes(Node node, Map<Node, Date> nodes, Date publishDate) {
+    
+    private static void findPageNodes(Node node, Map<Node, Date> nodes, Date publishDate) {
         if (nodes.containsKey(node) || TypeUtil.isSystemType(node.getNodeManager().getName())) {
             return;
         }
-
+        
         nodes.put(node, publishDate);
-
-        RelationManagerList rml = node.getNodeManager().getAllowedRelations((NodeManager) null, null, DESTINATION);
+        
+        RelationManagerList rml = node.getNodeManager().getAllowedRelations((NodeManager) null, null, DESTINATION);        
         if (!rml.isEmpty()) {
             NodeIterator childs = node.getRelatedNodes("object", null, DESTINATION).nodeIterator();
             while (childs.hasNext()) {
                Node childNode = childs.nextNode();
                if (!PagesUtil.isPageType(childNode)) {
                    if (PagesUtil.isStylesheet(childNode) || PortletUtil.isView(childNode)) {
-                       if (!isPublished(childNode)) {
+                       if (!PublishManager.isPublished(childNode)) {
                            nodes.put(childNode, new Date());
                        }
                    }
                    else {
                        if (PagesUtil.isLayout(childNode)
                                || PortletUtil.isDefinition(childNode)) {
-                           if (!isPublished(childNode)) {
+                           if (!PublishManager.isPublished(childNode)) {
                                findPageNodes(childNode, nodes, new Date());
                            }
                        }
                        else {
                            if (PortletUtil.isPortlet(childNode) && PortletUtil.isSinglePortlet(childNode)) {
-                               if (!isPublished(childNode)) {
+                               if (!PublishManager.isPublished(childNode)) {
                                    findPageNodes(childNode, nodes, new Date());
                                }
                            }
@@ -220,7 +219,7 @@ public class PagePublisher extends Publisher {
                                    if (childNode.getCloud().hasNode(qNodeNumber)) {
                                        Node qNode = childNode.getNodeValue(PortletUtil.VALUE_FIELD);
                                        if (PagesUtil.isPageType(qNode)) {
-                                           if (isPublished(qNode)) {
+                                           if (PublishManager.isPublished(qNode)) {
                                                nodes.put(childNode, publishDate);
                                            }
                                        }
@@ -230,10 +229,7 @@ public class PagePublisher extends Publisher {
                                    }
                                }
                                else {
-                                   boolean isNavigationType = NavigationUtil.getTreeManagers().containsKey(childNode.getNodeManager().getName());
-                                   if (!isNavigationType) {
-                                      findPageNodes(childNode, nodes, publishDate);
-                                   }
+                                   findPageNodes(childNode, nodes, publishDate);
                                }
                            }
                        }
@@ -242,5 +238,5 @@ public class PagePublisher extends Publisher {
             }
         }
     }
-
+    
 }
